--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -82,7 +82,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: release-${{ env.BUILD_TIMESTAMP }}
-        release_name: Padavan TP-Link EC220-G5 v2 (${{ env.BUILD_TIMESTAMP }})
+        release_name: Padavan TP-Link Archer C5 V4 (${{ env.BUILD_TIMESTAMP }})
         draft: false
         prerelease: false
 
