--- a/build.config
+++ b/build.config
@@ -70,7 +70,7 @@ CONFIG_FIRMWARE_ENABLE_SWAP=y
 #CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
-#CONFIG_FIRMWARE_INCLUDE_XFRM=y
+CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
@@ -225,7 +225,7 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 #CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
 
 ### Include DNSCrypt proxy ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
+CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
 
 ### Include Stubby DNS-over-TLS (DoT) ~0.5MB
 #CONFIG_FIRMWARE_INCLUDE_STUBBY=y
@@ -234,22 +234,22 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 #CONFIG_FIRMWARE_INCLUDE_DOH=y
 
 ### Include WPAD support
-#CONFIG_FIRMWARE_INCLUDE_WPAD=y
+CONFIG_FIRMWARE_INCLUDE_WPAD=y
 
 ### Include compressed memory support
-#CONFIG_FIRMWARE_INCLUDE_ZRAM=y
+CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Add adb package
 #CONFIG_FIRMWARE_INCLUDE_ADB=y
 
 ### Include LUA support ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_LUA=y
+CONFIG_FIRMWARE_INCLUDE_LUA=y
 
 ### Include EoIP Ethernet Tunnels over IP ~0.01MB
-#CONFIG_FIRMWARE_INCLUDE_EOIP=y
+CONFIG_FIRMWARE_INCLUDE_EOIP=y
 
 ### Include Curl support ~0.15MB
-#CONFIG_FIRMWARE_INCLUDE_CURL=y
+CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include KMS Activation support ~0.06MB
 #CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
