--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -60,9 +60,21 @@ jobs:
 
     - name: Prepare artifacts
       run: |
-        FW_FILE_NAME="$(find padavan-ng/trunk/images -type f -regextype posix-extended -iregex ".*\.(trx|bin)$" \
-                        -printf "%T@\t%f\n" | sort -V | tail -1 | cut -f2)"
-        cp "padavan-ng/trunk/images/$FW_FILE_NAME" .
+        # Find the newest firmware file
+        FW_FILE="$(find padavan-ng/trunk/images -type f -regextype posix-extended -iregex '.*\.(trx|bin)$' \
+                   -printf '%T@\t%p\n' | sort -V | tail -1 | cut -f2)"
+        
+        if [ -z "$FW_FILE" ]; then
+          echo "Error: No firmware file found!"
+          exit 1
+        fi
+        
+        # Extract just the filename
+        FW_FILE_NAME="$(basename "$FW_FILE")"
+        
+        # Copy the file
+        cp "$FW_FILE" .
+        
         echo "FW_FILE_NAME=$FW_FILE_NAME" >> $GITHUB_ENV
         echo "BUILD_TIMESTAMP=$(date '+%Y.%m.%d_%H.%M.%S')" >> $GITHUB_ENV
 
