--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -2,8 +2,6 @@ name: Build firmware
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'  # Запуск каждый день в 00:00 UTC
   push:
     tags:
       - '*'
@@ -60,21 +58,9 @@ jobs:
 
     - name: Prepare artifacts
       run: |
-        # Find the newest firmware file
-        FW_FILE="$(find padavan-ng/trunk/images -type f -regextype posix-extended -iregex '.*\.(trx|bin)$' \
-                   -printf '%T@\t%p\n' | sort -V | tail -1 | cut -f2)"
-        
-        if [ -z "$FW_FILE" ]; then
-          echo "Error: No firmware file found!"
-          exit 1
-        fi
-        
-        # Extract just the filename
-        FW_FILE_NAME="$(basename "$FW_FILE")"
-        
-        # Copy the file
-        cp "$FW_FILE" .
-        
+        FW_FILE_NAME="$(find padavan-ng/trunk/images -type f -regextype posix-extended -iregex ".*\.(trx|bin)$" \
+                        -printf "%T@\t%f\n" | sort -V | tail -1 | cut -f2)"
+        cp "padavan-ng/trunk/images/$FW_FILE_NAME" .
         echo "FW_FILE_NAME=$FW_FILE_NAME" >> $GITHUB_ENV
         echo "BUILD_TIMESTAMP=$(date '+%Y.%m.%d_%H.%M.%S')" >> $GITHUB_ENV
 
@@ -86,37 +72,6 @@ jobs:
         path: |
           ${{ env.FW_FILE_NAME }}
           build.config
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: release-${{ env.BUILD_TIMESTAMP }}
-        release_name: Padavan TP-Link Archer C5 V4 (${{ env.BUILD_TIMESTAMP }})
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ env.FW_FILE_NAME }}
-        asset_name: ${{ env.FW_FILE_NAME }}
-        asset_content_type: application/octet-stream
-
-    - name: Upload Config Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build.config
-        asset_name: build.config
-        asset_content_type: text/plain
 
     - name: Check firmware size
       run: |
