--- a/build.config
+++ b/build.config
@@ -34,7 +34,7 @@ CONFIG_FIRMWARE_ENABLE_USB=y
 #CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
-CONFIG_FIRMWARE_ENABLE_EXFAT=y
+#CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
@@ -43,7 +43,7 @@ CONFIG_FIRMWARE_ENABLE_EXFAT=y
 #CONFIG_FIRMWARE_ENABLE_EXT3=y
 
 ### Enable EXT4 (EXT3/2 too) filesystem support. ~0.4MB
-CONFIG_FIRMWARE_ENABLE_EXT4=y
+#CONFIG_FIRMWARE_ENABLE_EXT4=y
 
 ### Enable XFS filesystem support. ~0.6MB
 #CONFIG_FIRMWARE_ENABLE_XFS=y
@@ -52,7 +52,7 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 #CONFIG_FIRMWARE_ENABLE_HFS=y
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
-CONFIG_FIRMWARE_ENABLE_FUSE=y
+#CONFIG_FIRMWARE_ENABLE_FUSE=y
 
 ### Enable swap files/partitions support. ~0.05MB
 CONFIG_FIRMWARE_ENABLE_SWAP=y
@@ -125,7 +125,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=y
+#CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 #CONFIG_FIRMWARE_INCLUDE_U2EC=y
@@ -143,7 +143,7 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 #CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_SMBD=y
+#CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
