--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -3,7 +3,7 @@ name: Build firmware
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # Run at 00:00 UTC every day
+    - cron: '0 0 * * *'  # Запуск каждый день в 00:00 UTC
   push:
     tags:
       - '*'
@@ -63,18 +63,16 @@ jobs:
         FW_FILE_NAME="$(find padavan-ng/trunk/images -type f -regextype posix-extended -iregex ".*\.(trx|bin)$" \
                         -printf "%T@\t%f\n" | sort -V | tail -1 | cut -f2)"
         cp "padavan-ng/trunk/images/$FW_FILE_NAME" .
+        
+        # Create 128KB empty file and recovery firmware
+        dd if=/dev/zero of=128kempty.bin bs=128k count=1
+        cat 128kempty.bin "$FW_FILE_NAME" > tp_recovery.bin
+        
+        # Download TFTP server
+        wget -O tftpd64.464.zip https://bitbucket.org/phjounin/tftpd64/downloads/tftpd64.464.zip
+        
         echo "FW_FILE_NAME=$FW_FILE_NAME" >> $GITHUB_ENV
         echo "BUILD_TIMESTAMP=$(date '+%Y.%m.%d_%H.%M.%S')" >> $GITHUB_ENV
-
-    - name: Create Release
-      if: github.event_name != 'pull_request'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        gh release create "release_${BUILD_TIMESTAMP}" \
-          --title "Padavan TP-Link Archer C5 V4 (${BUILD_TIMESTAMP})" \
-          --notes "Automatic build from GitHub Actions" \
-          "$FW_FILE_NAME"
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
@@ -83,7 +81,85 @@ jobs:
         retention-days: 7
         path: |
           ${{ env.FW_FILE_NAME }}
-          build.config
+          tp_recovery.bin
+          tftpd64.464.zip
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: release-${{ env.BUILD_TIMESTAMP }}
+        release_name: Padavan TP-Link Archer C5 V4 (${{ env.BUILD_TIMESTAMP }})
+        body: |
+          📋 Инструкция прошивки
+          🔰 Подготовка:
+
+              🛡️ Отключаем брандмауэр
+              🔌 Подключаем кабель в LAN порт
+              ⚙️ Настраиваем IP: 192.168.0.66
+              💿 Распаковываем и запускаем Tftpd64
+              📁 Копируем tp_recovery.bin в папку TFTP
+
+
+          📝 Процесс прошивки:
+
+              🔌 Выключаем роутер
+              ⚡ Зажимаем Reset + включаем питание
+              ⏲️ Ждем 10-15 секунд
+              🔄 Отпускаем Reset
+              📊 Следим за процессом прошивки в окне Tftpd64
+              ✅ Ждем завершения прошивки
+
+
+          ⚠️ Важно: После прошивки верните автоматическое получение IP
+
+
+          🔄 Обновление прошивки
+          📥 Установка актуальной версии:
+
+              📱 Подключитесь к роутеру по кабелю LAN (не по Wi-Fi!)
+              🌐 Откройте веб-интерфейс http://192.168.1.1
+              ⚙️ Перейдите в раздел Администрирование -> Обновление прошивки
+              📦 Скачайте последнюю версию прошивки с GitHub Releases
+              📤 Выберите скачанный файл .bin (не архив!)
+              ✅ Нажмите "Обновить" и дождитесь перезагрузки (3-5 минут)
+
+
+          💡 Примечание: Первая прошивка через TFTP нужна только один раз. Все последующие обновления устанавливаются через веб-интерфейс.
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./${{ env.FW_FILE_NAME }}
+        asset_name: ${{ env.FW_FILE_NAME }}
+        asset_content_type: application/octet-stream
+
+    - name: Upload Recovery Firmware Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./tp_recovery.bin
+        asset_name: tp_recovery.bin
+        asset_content_type: application/octet-stream
+
+    - name: Upload TFTP Server Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./tftpd64.464.zip
+        asset_name: tftpd64.464.zip
+        asset_content_type: application/zip
 
     - name: Check firmware size
       run: |
