--- a/.github/workflows/Build firmware2.yml
+++ b/.github/workflows/Build firmware2.yml
@@ -18,8 +18,8 @@ jobs:
 
     - name: Get variables
       run: |
-        sed -i 's|\r$||g' variables build.config
-        . <(cat variables build.config)
+        sed -i 's|\r$||g' variables build2.config
+        . <(cat variables build2.config)
         PADAVAN_THEMES="${PADAVAN_THEMES[*]}"
         for v in "${!PADAVAN_@}" "${!CONFIG_@}"; do
           echo "$v=${!v}" >> $GITHUB_ENV
@@ -49,7 +49,7 @@ jobs:
 
     - name: Build firmware
       run: |
-        cp build.config padavan-ng/trunk/.config
+        cp build2.config padavan-ng/trunk/.config
         pushd padavan-ng/trunk
         ./clear_tree.sh
         ./build_firmware.sh
