--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -93,7 +93,35 @@ jobs:
         tag_name: release-${{ env.BUILD_TIMESTAMP }}
         release_name: Padavan TP-Link Archer C5 V4 LITE (${{ env.BUILD_TIMESTAMP }})
         body: |
+          🌟 Основные функции прошивки:
+          
+          📡 Сеть и подключения:
+          • 🌍 PPTP/L2TP клиент
+          • 🔄 DDNS с поддержкой No-IP/DynDNS
+          • 📱 IPTV режим
+          
+          🛠️ Системные утилиты:
+          • 📊 Мониторинг системы
+          • 🕒 Планировщик задач (Cron)
+          • 💾 USB накопители (FAT/ext4)
+          • 🔍 Samba сервер
+          
+          🔐 Безопасность:
+          • 🛡️ Базовый межсетевой экран
+          • 🚫 Блокировка рекламы
+          • 👥 Гостевая сеть
+          
+          🎮 Дополнительные функции:
+          • 🌡️ Мониторинг температуры
+          • ⚡ Управление USB портами
+          • 📶 Настройка мощности Wi-Fi
+          
+          📦 Предустановленные пакеты:
+          • 📡 Wireless tools
+          • 🔧 Базовые утилиты системы
+
           📋 Инструкция прошивки
+          
           🔰 Подготовка:
 
               🛡️ Отключаем брандмауэр
