--- a/.github/workflows/Build firmware.yml
+++ b/.github/workflows/Build firmware.yml
@@ -93,6 +93,40 @@ jobs:
         tag_name: release-${{ env.BUILD_TIMESTAMP }}
         release_name: Padavan TP-Link Archer C5 V4 LITE (${{ env.BUILD_TIMESTAMP }})
         body: |
+          🔧 Возможности и компоненты прошивки:
+
+          ⚡ Процессор и WiFi:
+          • 🚀 Разгон процессора MT7620 до 600MHz
+          • 📡 WiFi драйвер версии 2.7
+
+          🌐 Сетевые функции:
+          • ✨ Поддержка IPv6
+          • 🛡️ XFRM (IPsec) модули и расширения iptables
+          • 🎯 IPSet для расширенной работы с IP-адресами
+          • 🔄 Shortcut Forward Engine для ускорения маршрутизации
+          
+          🔒 Безопасность и VPN:
+          • 🔐 OpenVPN
+          • 🔑 Dropbear SSH с оптимизированным кодом
+          • 🛡️ HTTPS поддержка и SSL
+          • 🔒 EAP-TTLS и EAP-PEAP аутентификация
+          • 🌐 HTTPS для DDNS клиента
+          • 🔑 OpenSSL с поддержкой Elliptic Curves
+          • 🛠️ Утилита openssl для генерации сертификатов
+          
+          🌍 Сервисы и утилиты:
+          • 📡 xUPNPd IPTV медиасервер
+          • 🔐 DNSCrypt прокси
+          • 🌐 WPAD поддержка
+          • 💾 Compressed memory (ZRAM)
+          • 🔄 EoIP туннели
+          • 🌐 Поддержка Curl
+          • 🛡️ nfqws для обхода блокировок
+          • 🔧 Поддержка LUA
+          
+          🌍 Языки интерфейса:
+          • 🇷🇺 Русский
+
           🌟 Основные функции прошивки:
           
           📡 Сеть и подключения:
