--- a/.github/workflows/Build firmware LITE.yml
+++ b/.github/workflows/Build firmware LITE.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Get variables
       run: |
-        sed -i 's|\r$||g' variables build.config
+        sed -i 's|\r$||g' variables 'build LITE.config'
         . <(cat variables build.config)
         PADAVAN_THEMES="${PADAVAN_THEMES[*]}"
         for v in "${!PADAVAN_@}" "${!CONFIG_@}"; do
