Update Build firmware LITE.yml

--- a/.github/workflows/Build firmware LITE.yml
+++ b/.github/workflows/Build firmware LITE.yml
@@ -93,67 +93,13 @@ jobs:
         tag_name: release-${{ env.BUILD_TIMESTAMP }}
         release_name: Padavan TP-Link Archer C5 V4 LITE (${{ env.BUILD_TIMESTAMP }})
         body: |
-          🔧 Возможности и компоненты прошивки:
+          ## 💝 Поддержать разработку
 
-          ⚡ Процессор и WiFi:
-          • 🚀 Разгон процессора MT7620 до 600MHz
-          • 📡 WiFi драйвер версии 2.7
+          Если вам нравится прошивка, вы можете поддержать разработку:
 
-          🌐 Сетевые функции:
-          • ✨ Поддержка IPv6
-          • 🛡️ XFRM (IPsec) модули и расширения iptables
-          • 🎯 IPSet для расширенной работы с IP-адресами
-          • 🔄 Shortcut Forward Engine для ускорения маршрутизации
+          - [Купить кофе](https://pay.cloudtips.ru/p/afb55f71)
+          - [Поддержать на Boosty](https://boosty.to/danayer)
           
-          🔒 Безопасность и VPN:
-          • 🔐 OpenVPN
-          • 🔑 Dropbear SSH с оптимизированным кодом
-          • 🛡️ HTTPS поддержка и SSL
-          • 🔒 EAP-TTLS и EAP-PEAP аутентификация
-          • 🌐 HTTPS для DDNS клиента
-          • 🔑 OpenSSL с поддержкой Elliptic Curves
-          • 🛠️ Утилита openssl для генерации сертификатов
-          
-          🌍 Сервисы и утилиты:
-          • 📡 xUPNPd IPTV медиасервер
-          • 🔐 DNSCrypt прокси
-          • 🌐 WPAD поддержка
-          • 💾 Compressed memory (ZRAM)
-          • 🔄 EoIP туннели
-          • 🌐 Поддержка Curl
-          • 🛡️ nfqws для обхода блокировок
-          • 🔧 Поддержка LUA
-          
-          🌍 Языки интерфейса:
-          • 🇷🇺 Русский
-
-          🌟 Основные функции прошивки:
-          
-          📡 Сеть и подключения:
-          • 🌍 PPTP/L2TP клиент
-          • 🔄 DDNS с поддержкой No-IP/DynDNS
-          • 📱 IPTV режим
-          
-          🛠️ Системные утилиты:
-          • 📊 Мониторинг системы
-          • 🕒 Планировщик задач (Cron)
-          • 💾 USB накопители (FAT/ext4)
-          • 🔍 Samba сервер
-          
-          🔐 Безопасность:
-          • 🛡️ Базовый межсетевой экран
-          • 🚫 Блокировка рекламы
-          • 👥 Гостевая сеть
-          
-          🎮 Дополнительные функции:
-          • 🌡️ Мониторинг температуры
-          • ⚡ Управление USB портами
-          • 📶 Настройка мощности Wi-Fi
-          
-          📦 Предустановленные пакеты:
-          • 📡 Wireless tools
-          • 🔧 Базовые утилиты системы
-
           📋 Инструкция прошивки
           
           🔰 Подготовка:
