Update Build firmware LITE.yml

--- a/.github/workflows/Build firmware LITE.yml
+++ b/.github/workflows/Build firmware LITE.yml
@@ -100,6 +100,10 @@ jobs:
           - [Купить кофе](https://pay.cloudtips.ru/p/afb55f71)
           - [Поддержать на Boosty](https://boosty.to/danayer)
           
+          ℹ️ О прошивке
+          
+          Данная прошивка является максимально чистой версией, созданной специально для обхода блокировок сайтов и комфортного пользования интернетом.
+          
           📋 Инструкция прошивки
           
           🔰 Подготовка:
