--- a/.github/workflows/Build firmware Entware-Optware.yml
+++ b/.github/workflows/Build firmware Entware-Optware.yml
@@ -18,8 +18,9 @@ jobs:
 
     - name: Get variables
       run: |
-        sed -i 's|\r$||g' variables build Entware-Optware.config
-        . <(cat variables build.config)
+        sed -i 's|\r$||g' variables "build Entware-Optware.config"
+        cp "build Entware-Optware.config" build.config
+        . <(cat build.config)
         PADAVAN_THEMES="${PADAVAN_THEMES[*]}"
         for v in "${!PADAVAN_@}" "${!CONFIG_@}"; do
           echo "$v=${!v}" >> $GITHUB_ENV
