--- a/.github/workflows/Build firmware Entware-Optware.yml
+++ b/.github/workflows/Build firmware Entware-Optware.yml
@@ -92,7 +92,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: release-${{ env.BUILD_TIMESTAMP }}
-        release_name: Padavan TP-Link Archer C5 V4 Entware (${{ env.BUILD_TIMESTAMP }})
+        release_name: Padavan TP-Link Archer C5 V4 Entware/Optware (${{ env.BUILD_TIMESTAMP }})
         body: |
           ## 💝 Поддержать разработку
 
