--- a/build Entware-Optware.config
+++ b/build Entware-Optware.config
@@ -165,7 +165,7 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 #CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
 #CONFIG_FIRMWARE_INCLUDE_SFTP=y
@@ -262,4 +262,8 @@ CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_IP_NF_QUEUE=m
 
+### Include AmneziaWG kernel module
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
 
+### Reduce trx image size
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
