--- a/build LITE.config
+++ b/build LITE.config
@@ -128,3 +128,9 @@ CONFIG_FIRMWARE_INCLUDE_NFQWS=y
 CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_IP_NF_QUEUE=m
+
+### Include AmneziaWG kernel module
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
+
+### Reduce trx image size
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
